# karma-pp

./: .gitignore  README.md  pyproject.toml
.mplconfig/: fontlist-v390.json
data/: karma.db
data/mechanisms/: benevolent_dictator.yaml  coin_toss.yaml  karma_mechanism.yaml  turn_taking.yaml
data/plots/: 1000x2_markov_urgency_metrics.yaml
data/scenarios/: 1000x2_benevolent_dictator.yaml  1000x2_coin_toss_silent.yaml  1000x2_full_info_learners.yaml  1000x2_turn_taking_truthful.yaml  2000x2_full_info_gamma_0.00.yaml  2000x2_full_info_gamma_0.10.yaml  2000x2_full_info_gamma_0.20.yaml  2000x2_full_info_gamma_0.30.yaml  2000x2_full_info_gamma_0.40.yaml  2000x2_full_info_gamma_0.50.yaml  2000x2_full_info_gamma_0.60.yaml  2000x2_full_info_gamma_0.70.yaml  2000x2_full_info_gamma_0.80.yaml  2000x2_full_info_gamma_0.90.yaml  2000x2_full_info_gamma_0.98.yaml  2000x2_karma_policy.yaml  200x2_benevolent_dictator.yaml  200x2_coin_toss.yaml  200x2_coin_toss_silent.yaml  200x2_full_info_gamma_0.00.yaml  200x2_full_info_gamma_0.10.yaml  200x2_full_info_gamma_0.20.yaml  200x2_full_info_gamma_0.30.yaml  200x2_full_info_gamma_0.40.yaml  200x2_full_info_gamma_0.50.yaml  200x2_full_info_gamma_0.60.yaml  200x2_full_info_gamma_0.70.yaml  200x2_full_info_gamma_0.80.yaml  200x2_full_info_gamma_0.90.yaml  200x2_full_info_gamma_0.98.yaml  200x2_full_info_learners.yaml  (+18 more)
docs/: VIS_COMMANDS.md
exp/: run_gamma_policy_sweep.py
tests/: test_agents.py  test_benevolent_dictator.py  test_integration.py  test_karma_mechanism.py  test_resource_world.py  test_system_measures.py  test_turn_taking.py
(+68 files in other folders)
